--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 29
+  compileSdkVersion 31
 
   defaultConfig {
     applicationId "com.pluralsight.candycoded"
     minSdkVersion 15
-    targetSdkVersion 29
+    targetSdkVersion 31
     versionCode 1
     versionName "1.0"
 
@@ -22,8 +22,8 @@ android {
 
   testOptions {
     unitTests.returnDefaultValues = true
-  }
 
+  }
   sourceSets.test.resources.srcDirs += ["src/main"]
 }
 
@@ -35,7 +35,7 @@ dependencies {
   implementation 'com.google.code.gson:gson:2.8.0'
   implementation 'com.squareup.picasso:picasso:2.5.2'
 
-  testImplementation 'junit:junit:4.12'
+  testImplementation 'junit:junit:4+'
   testImplementation 'com.github.javaparser:javaparser-core:3.0.1'
   testImplementation "org.powermock:powermock-module-junit4:1.7.1"
   testImplementation "org.powermock:powermock-api-mockito2:1.7.1"
